1.2.27 -CSS: #sl_info_bubble update to avoid centering, line-height overspacing -store-locator-js.php update dynamically gets icon height, width now -store-locator.js accomdates the above now; added if statement for icon if named "sign" -functions.sl.php: line break btwn geocoding error msgs now -icons: added "_sign" to house, airport, food icon; added "blank.png"
git-svn-id: https://plugins.svn.wordpress.org/store-locator/trunk@123243 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/store-locator.css
+++ b/store-locator.css
@@ -18,8 +18,20 @@
 	/*padding:0px;*/
 }
 #sl_div #map { color:black; font-weight:normal;}
-#sl_info_bubble { padding:10px; max-width:300px; /*max-height:400px; */ font-size:11px; font-family:Arial;}
-#map_sidebar { background-color:white; font-weight:normal;}
+#sl_info_bubble { 
+	padding:10px; 
+	max-width:300px; 
+	/*max-height:400px; */ 
+	font-size:11px; 
+	font-family:Arial;
+	text-align:justify;
+	line-height:normal;
+	}
+#map_sidebar { 
+	/*background-color:transparent; */
+	font-weight:normal;
+	text-align:justify;
+	}
 #addressInput {
 	border:solid 1px silver;
 	padding-left:3px; padding-top:3px;
